[package]
name = "solana-swap-dex"
version = "0.1.0"
description = "SolanaSwapDEX on-chain program for SOL/USDC strategy execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_swap_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
